fix responsive spacing issues

--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -44,6 +44,17 @@ Article: https://engageinteractive.co.uk/blog/top-10-scss-mixins
 	 }
 
 */
+$breakpoints: (
+    "phone":        400px,
+    "phone-plus":   401px,
+    "phone-wide":   480px,
+    "phablet":      560px,
+    "tablet-small": 640px,
+    "tablet":       768px,
+    "tablet-wide":  1024px,
+    "desktop":      1248px,
+    "desktop-wide": 1440px
+);
 
 @mixin mq(
 	$from: false,
